# card-game

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/cardgame/api/: main.py
backend/src/cardgame/bots/: heuristic.py
backend/src/cardgame/cards/: registry.py
backend/src/cardgame/cards/sets/: core.py
backend/src/cardgame/engine/: actions.py  bot_driver.py  effects.py  match.py  models.py  resolver.py  rng.py
backend/src/cardgame/sim/: runner.py
backend/tests/: test_api.py  test_match.py
