[project]
name = "cardgame"
version = "0.0.1"
description = "Collectable card game prototype"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "basedpyright>=1.22",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cardgame"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
